# 3DOF-Puma_Robot

./: README.md
src/puma_robot/: CMakeLists.txt  package.xml  setup.py
src/puma_robot/launch/: display.launch.py
src/puma_robot/rviz/: puma_config.rviz
src/puma_robot/scripts/: joint_state_logger.py  logger_web_ui.html  puma_controller.py  puma_web_ui.html  ros2_web_bridge.py  test.html  test.py
src/puma_robot/urdf/: puma_3dof.urdf.xacro
